# programming-III

./: .gitignore  1SG131 SEM P3 Analisis Reg Acad Estudiantil(P3 Proy Sem datos acad).csv  ARCHITECTURE.md  IMPROVEMENTS.md  README.md  config.py  main.py  pyproject.toml
src/: __init__.py
src/analysis/: grouping.py  risk_analysis.py  statistics.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  exceptions.py  logging_setup.py  validators.py
src/data/: data_cleaner.py  data_loader.py
src/reports/: __init__.py  apa_report.py  apa_report_generator.py
src/utils/: __init__.py  helpers.py
src/visualization/: __init__.py  charts.py
