[project]
name = "programming-iii"
version = "0.1.0"
description = "Sistema de Análisis de Datos Académicos para la Universidad Tecnológica de Panamá"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "reportlab>=4.4.2",
    "seaborn>=0.13.2",
]
